--- a/staff/jaume-rodriguez/picasso/style.css
+++ b/staff/jaume-rodriguez/picasso/style.css
@@ -2,11 +2,20 @@ body{
     background-color: antiquewhite;
 }
 
-.center{
+.centerCabeza{
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
-    align-content: center;
+}
+
+.centerCuerpo{
+    display: flex;
+    flex-direction: row;
+}
+
+.centerCola{
+    display: flex;
+    flex-direction: row;
 }
 
 .nameAnimal{
