correct style.css

--- a/staff/federico-lopez/picasso/style.css
+++ b/staff/federico-lopez/picasso/style.css
@@ -27,6 +27,11 @@ div {
 }
 
 .circle {
+  margin: 0 16px 16px 50px;
+  /* margin-top: 0;
+    margin-right: 16px;
+    margin-bottom: 16px;
+    margin-left: 50px; */
   background-color: wheat;
   width: 100px;
   height: 100px;
