--- a/staff/cristina-marquez/app/style.css
+++ b/staff/cristina-marquez/app/style.css
@@ -29,19 +29,33 @@ button {
 }
 
 .header {
-    background-color: darksalmon;
+    background-color: rgb(128, 215, 208);
     position: fixed;
     top: 0;
     width: 100%;
     height: 35px;
+
+    display: flex;
+    align-items: center;
+    gap: 15px;
 }
 
 .header__menu {
+    position: fixed;
+    top: 35px;
+    padding-bottom: 30px;
+    background-color: inherit;
+
+
     display: flex;
     flex-direction: column;
     align-items: flex-start;
 }
 
+.header__menu>button {
+    margin-bottom: 6px;
+}
+
 .header__title {
-    color: brown;
+    color: rgb(56, 56, 56);
 }
