--- a/staff/federico-alejandro/app/style.css
+++ b/staff/federico-alejandro/app/style.css
@@ -2,8 +2,9 @@
 
 
 
-html, body {
-     height:100%;
+html, 
+body {
+    height:100%;
 }
 
 body {
@@ -11,12 +12,28 @@ body {
     
 }
 
+button {
+    background-color: transparent;
+    border: none;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    margin: o;
+}
+
+
+
 .container {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: .5rem;
+    gap: 0.5rem;
 }
 
 .container__item--left {
@@ -27,36 +44,50 @@ body {
     align-self: end;
 }
 
-.login {
-    color: #FFF;
-    background: #1904fc; 
-    border-color: #080fef;
-}
 
 .header {
+    /*external*/
     position: fixed;
     top: 0;
     width: 100%;
     height: 30px;
-    box-shadow: 0 0 5px 0 rgba(red, rgba(0, 128, 0, 0.967), blue, alpha);
+    box-shadow: 0 0 5px 0 rgba(50, 0, 180, 0.5);
+    /*internal*/
     background-color: #1904fc;
+    display: flex;
+    align-items: center;
+    gap: 15px;
 }
 
-.header_menu{
-    position: fixed
-    top= 10px;
-    left: 0;
-    height: 20px;
+header_menu-button {
+    order: O;
+}
+
+.header__menu {
+    position: fixed;
+    top: 30px;
+    height: 60px;
+    box-shadow: 0 1px 5px 0 rgba(50, 0, 180, 0.5);
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     justify-content: space-around;
-    background-color: blue;
-    box-shadow: 0 3px 8px 0 rgb(red, green, blue);
+    background-color: inherit;
+    
+
+}
+
+.header__tittle {
+   margin-left: 15px;
+   font-size: 1.5rem;
+   color: red;
+   text-decoration: underline;
+   font-weight: 200;
    
 }
 
-.header_tittle {
-    margin-left: 5%;
-    font-size: 1.5rem;
-}
+
+
+
+
+
