--- a/staff/xavi-grandes/chess-board/style.css
+++ b/staff/xavi-grandes/chess-board/style.css
@@ -13,12 +13,12 @@ body {
 }
 
 .tablero {
-    height: 600px;
-    width: 600px;
+    height: 80vw;
+    width: 80vw;
     display: grid;
     grid-template-columns: repeat(8, 1fr);
     grid-template-rows: repeat(8, 1fr);
-    border: 4px solid black;
+    border: 1rem solid black;
     text-align: center;
 }
 
@@ -26,6 +26,8 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    min-width: fit-content;
+    min-height: fit-content;
 }
 
 .white {
@@ -38,6 +40,7 @@ body {
 }
 
 .token {
-    width: 50px;
-    height: 50px;
+    width: 90%;
+    height: 90%;
 }
+
