--- a/staff/federico-alejandro/tablero-ajedrez/style.css
+++ b/staff/federico-alejandro/tablero-ajedrez/style.css
@@ -4,6 +4,7 @@
 
 html, body {
     height: 100%;
+    margin: 0%;
 }
 
 body {
@@ -11,33 +12,44 @@ body {
     align-items: center;
     justify-content: center;
     background-color: green;
-    padding: 50px;
-}
+    
 
+}
 
 
 .tablero {
     display: grid;
-    outline: 30px solid rgba(204, 56, 56, 0.705);
+    height: 50vw;
+    width: 50vw;
+    border: 8px solid rgba(204, 56, 56, 0.705);
     grid-template-columns: repeat(8, 1fr);
     grid-template-rows: repeat(8, 1fr);
-    height: 500px;
-    width: 500px;
+   
     
 }
 
 .tablero-ajedrez-negro {
+    background-color: grey;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: fit-content;
+    min-width: fit-content;
+    
+   
+}
+
+.tablero-ajedrez-blanco {
     background-color: white;
     display: flex;
     align-items: center;
     justify-content: center;
+    min-height: fit-content;
+    min-width: fit-content;
 }
 
-.tablero-ajedrez-blanco {
-    background-color: gray;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.ficha {
+    width: 100%;
+    height: 100%;
 }
-
 
