--- a/staff/federico-alejandro/app/style.css
+++ b/staff/federico-alejandro/app/style.css
@@ -5,15 +5,21 @@
 html, 
 body {
     height:100%;
+    
 }
 
 body {
+    display: flex;
+    
     margin: 0;
+    background-color: aqua;
+    
+
     
 }
 
 button {
-    background-color: transparent;
+    background-color: blue;
     border: none;
 }
 
