--- a/staff/jaume-rodriguez/vanilla-app/style.css
+++ b/staff/jaume-rodriguez/vanilla-app/style.css
@@ -3,6 +3,7 @@
     box-sizing: border-box;
     margin: 0;
     text-decoration: none;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 a{
@@ -11,10 +12,46 @@ a{
 
 html, body{
     height: 100%;
+    background-color: rgb(255, 255, 255);
 }
 
 h1{
     text-align: center;
+}
+
+div h1{
+    color: rgb(93, 93, 93);
+    font-size: 1.2rem;
+    font-weight: normal;
+    margin-bottom: 1rem;
+}
+
+input{
+    height: 2.5rem;
+    border-color: rgb(222, 222, 222);
+    border-radius: 0.2rem;
+    border-style: solid;
+    color: rgb(68, 68, 68);
+    font-size: medium;
+}
+
+form img{
+    margin-bottom: 2rem;
+    width: 40%;
+    height: auto;
+    align-self: center;
+    
+}
+
+.anchor__login{
+    margin-top: 1.4rem;
+    color: rgb(72, 136, 255);
+    font-size: small;
+}
+
+.anchor__login:hover{
+    background-color: transparent;
+    color: rgb(255, 93, 93);
 }
 
 .container-flex{
@@ -22,6 +59,8 @@ h1{
     height: 100%;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
+    flex-direction: column;
 }
 
 /* FORMULARIO */
@@ -29,13 +68,24 @@ h1{
     display: flex;
     justify-content: start;
     flex-direction: column;
-    gap: 0.4rem;
+    width: 23rem;
+    gap: 0.5rem;
+    background-color: rgb(245, 245, 245);
+    padding: 3.5rem 3rem;
+    border-radius: 0.2rem;
+    box-shadow: 0rem 0.2rem 0.3rem 0 rgb(208, 208, 208);
 }
 
 .button{
-    width: 50%;
+    width: 100%;
+    height: 2rem;
     align-self: flex-start;
-    margin: 0.2rem 0;
+    padding: 0.3rem;
+    background-color: rgb(38, 139, 247);
+    border-style: inherit;
+    border-radius: 0.2rem;
+    color: white;
+    font-weight: bold;
 }
 
 .textForm{
