--- a/staff/armando-alonso/app/style.css
+++ b/staff/armando-alonso/app/style.css
@@ -14,13 +14,13 @@ body {
   justify-content: center;
   gap: 0.9rem;
   background-color: white;
-  min-height: 550px;
-  min-width: 350px;
+  /* min-height: 550px;
+  min-width: 350px; */
 }
 
 .form {
   border-radius: 10px;
-  padding-top: 5%;
+  padding: 2%;
   display: flex;
   flex-direction: column;
   align-items: center;
