--- a/staff/ignacio-nuñez/picasso/style.css
+++ b/staff/ignacio-nuñez/picasso/style.css
@@ -1,37 +1,18 @@
-.rectangle{
-    background-color: aqua;
-    width: 100px;
-    height: 50px;
-    border: 1px dotted black;
-    display: inline;
-}
-.circle{
-    background-color: wheat;
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    border: 1px solid red;
-}
-.semicircle{
-    margin: 50px;
-    background-color: blueviolet;
-    width: 200px;
-    height: 100px;
-    border-radius: 150px 150px 0 0;
-}
-.gota{
-    margin: 50px;
-    background-color: aqua;
-    width: 100px;
-    height: 100px;
-    transform: rotate(50deg);
-    border-radius: 0 50% 50% 50%;
-}
 
-.triangle{
-    width: 200px;
-    height: 0px;
-    border-right: 120px solid transparent;
-    border-left: 120px solid transparent;
-    border-bottom: 200px solid #428bca;
+.container{
+    width: 600px;
+    height: 600px;
+    background-color: brown;
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+    grid-template-rows: repeat(8, 1fr);
+    gap:15px;
+    border-radius: 50%;
+}
+.casillas{
+    border: 1px solid black;
+    background-color: aqua;
+    grid-column: 2 / 4;
+    grid-row: 2/ 4;
+    border-radius: 50%;
 }
