--- a/staff/jaume-rodriguez/vanilla-app/style.css
+++ b/staff/jaume-rodriguez/vanilla-app/style.css
@@ -70,10 +70,12 @@ form img{
     flex-direction: column;
     width: 23rem;
     gap: 0.5rem;
-    background-color: rgb(245, 245, 245);
     padding: 3.5rem 3rem;
     border-radius: 0.2rem;
-    box-shadow: 0rem 0.2rem 0.3rem 0 rgb(208, 208, 208);
+    box-shadow: 0rem 0.15rem 0.3rem 0 rgb(208, 208, 208);
+    border-style: solid;
+    border-width: 0.05rem;
+    border-color: rgb(197, 197, 197);
 }
 
 .button{
