add coolog.js and labels in login and register.html

--- a/staff/jaume-rodriguez/vanilla-app/style.css
+++ b/staff/jaume-rodriguez/vanilla-app/style.css
@@ -32,7 +32,7 @@ input{
     border-width: 0.12rem;
     border-radius: 0.2rem;
     border-style: solid;
-    color: rgb(68, 68, 68);
+    color: rgb(88, 88, 88);
     font-size: medium;
 }
 
@@ -70,7 +70,7 @@ form img{
     justify-content: start;
     flex-direction: column;
     width: 23rem;
-    gap: 0.5rem;
+    gap: 0.2rem;
     padding: 3.5rem 3rem;
     border-radius: 0.2rem;
     box-shadow: 0rem 0.15rem 0.3rem 0 rgb(208, 208, 208);
@@ -89,6 +89,8 @@ form img{
     border-radius: 0.2rem;
     color: white;
     font-weight: bold;
+    border-width: 0.1rem;
+    border-color: rgb(24, 136, 255);
 }
 
 .textForm{
