--- a/staff/yubal-hormiga/vanilla-app/style.css
+++ b/staff/yubal-hormiga/vanilla-app/style.css
@@ -69,14 +69,16 @@ button {
 }
 
 a:link{
+    color: white;
+    font-weight: bolder;
+    display: block;
     text-transform: uppercase;
     margin-top: 20px;
     text-decoration: none;
-    text-align: center;
-    background-color: #40798c;
-    padding: 10px;
+    padding: 2px;
+    background-color: #0f3643;
     border-radius: 5px;  
-    width: 100px;     
+    text-align: center;    
     
 }
 
