--- a/staff/xavi-grandes/app/style.css
+++ b/staff/xavi-grandes/app/style.css
@@ -5,7 +5,7 @@ html {
 }
 
 body {
-    background-image: url(https://cdn.wallpapersafari.com/72/69/u8UmGY.jpg);
+    background-color: aliceblue;;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -88,4 +88,46 @@ a {
     font-size: 12px;
     text-decoration: none;
     color: grey;
+}
+
+/* ------HOME PAGE------- */
+
+*{
+    margin: 0;
+}
+
+header {
+    /* interno */
+    background-color: blue;
+
+    /* externo */
+    position: fixed;
+    width: 100%;
+    top: 0;
+    height: 30px;
+}
+
+.burguer-list{
+    /* interno */
+    background-color: inherit;
+    width: 100px;
+    gap: 2px;
+
+    /* externo */
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+}
+
+section {
+    margin: 100px 0;
+}
+
+button {
+    background-color: transparent;
+    border: none;
+}
+
+span .material-symbols-outlined {
+    width: 10px;
 }
