--- a/staff/armando-alonso/vanilla-app.1/style.css
+++ b/staff/armando-alonso/vanilla-app.1/style.css
@@ -2,7 +2,7 @@
     margin: 0;
 }
 
-body {
+body , html {
   height: 100%;
   background-image: linear-gradient(to bottom right, purple, green);
 }
@@ -13,18 +13,19 @@ body {
   align-items: center;
   justify-content: center;
   gap: 0.9rem;
-  background-color: white;
-  /* min-height: 550px;
-  min-width: 350px; */
+  
+
 }
 
 .form {
   border-radius: 10px;
-  padding: 2%;
+  padding: 10% !important;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: start;
+  background-color: white;
+  box-shadow: 2px 2px 10px 0px rgb(4, 4, 4);
 }
 
 h1 {
@@ -56,8 +57,8 @@ h1 {
 .enlace {
   text-decoration: none;
   display: flex;
-  justify-content: baseline;
-  align-self: flex-end;
+  justify-content: center;
+  /* align-self: flex-end; */
   color: white;
 }
 
@@ -75,16 +76,13 @@ h1 {
     
 }
 
-/* Navbar container */
-.navbar {
-  overflow: hidden;
-  background-color: rgb(134, 134, 134);
-  font-family: Arial;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-}
 
-/* Links inside the navbar */
+/* Navbar pillada de internet para aprender como hacer un menu desplegable con css y 
+tener algo rápido https://es.w3hmong.com/howto/howto_css_dropdown_navbar.htm  */
+
 .navbar a {
+  display: block;
+  gap: 0.9rem;
   float: left;
   font-size: 16px;
   color: white;
@@ -145,4 +143,3 @@ h1 {
 .news:hover .news-content {
   display: block;
 }
-
