--- a/staff/ignacio-nuñez/vanila-app/style.css
+++ b/staff/ignacio-nuñez/vanila-app/style.css
@@ -3,7 +3,7 @@
     box-sizing: border-box;
 }
 
-html, body, .reset{
+html, body{
     height: 100%;
     margin: 0;
     padding: 0;
@@ -13,6 +13,7 @@ html, body, .reset{
 /*layout*/
 
 .container{
+    height: 85%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -23,16 +24,16 @@ html, body, .reset{
 }
 
 .borde-register{
-    height: 60%;
-    width: 25%;
+    height: 80%;
+    width: 26%;
     border: 2px solid black;
     background-color: beige;
     border-radius: 10px;
 }
 
 .borde-login{
-    height: 50%;
-    width: 20%;
+    height: 70%;
+    width: 22%;
     border: 2px solid black;
     background-color: beige;
     border-radius: 10px;
@@ -76,7 +77,7 @@ html, body, .reset{
 }
 
 .home-text{
-    width: 45%;
+    width: 48%;
     text-align: center;
     text-decoration: none;
     border: 1px solid rgb(183, 182, 182);
@@ -86,12 +87,12 @@ html, body, .reset{
     box-shadow: 1px 1px 0px rgb(0, 0, 0, 0.4);
 }
 .register-text{
-    width: 45%;
+    width: 80%;
     text-align: center;
     text-decoration: none;
     border: 1px solid rgb(183, 182, 182);
     border-radius: 5px;
-    background-color: rgb(250, 235, 215);
+    background-color: rgb(250, 235, 215)    ;
     color: black;
     box-shadow: 1px 1px 0px rgb(0, 0, 0, 0.4);
 }
@@ -112,3 +113,72 @@ hr{
 p{
     margin-top: 10px;
 }
+
+.home-contenedor{
+    height: 85%;
+    background-color: bisque;
+}
+
+.home-header{
+    height: 15%;
+    background-color: beige
+}
+
+.home-nav{
+    height: 100%;
+    display: grid;
+    grid-template-columns: repeat(9, 1fr);
+    grid-template-rows: 1fr 1fr 1fr;
+    text-align: center;
+}
+
+.home-link-home{
+    grid-column: 1 / 2;
+    grid-row: 2/3;
+    align-self: center;
+    text-decoration: none;
+    color: rgb(101, 98, 98);
+    font-size: 25px;
+}
+    
+
+.home-link-login{
+    grid-column: 8 / 9;
+    grid-row: 2/3;
+    align-self: center;
+    text-decoration: none;
+    color: rgb(101, 98, 98);
+    font-size: 25px;
+}
+
+.home-link-register{
+    grid-column: 9 / 10  ;
+    grid-row: 2/3;
+    align-self: center;
+    text-decoration: none;
+    color: rgb(101, 98, 98);
+    font-size: 25px;
+}   
+
+.home-title{
+    grid-column: 5/6;
+    grid-row: 2/3;
+    align-self:center;
+    font-size: 40px;
+}
+
+.home-link-home:hover{
+  font-size: 30px;
+  color:goldenrod
+}
+
+.home-link-login:hover{
+    font-size: 30px;
+    color:goldenrod
+}
+
+.home-link-register:hover{
+    font-size: 30px;
+    color:goldenrod 
+}   
+
