--- a/staff/armando-alonso/vanilla-app.2/index.css
+++ b/staff/armando-alonso/vanilla-app.2/index.css
@@ -2,7 +2,7 @@
     margin: 0;
 }
 
-body {
+body , html {
   height: 100%;
   background-image: linear-gradient(to bottom right, purple, green);
 }
@@ -10,21 +10,24 @@ body {
 .container {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  gap: 0.9rem;
-  background-color: white;
-  /* min-height: 550px;
-  min-width: 350px; */
+}
+
+.container--home {
+  width: 100%;
+  height: 100%;
 }
 
 .form {
-  border-radius: 10px;
-  padding: 2%;
   display: flex;
   flex-direction: column;
+  align-self: center;
   align-items: center;
-  justify-content: start;
+  gap: 0.9rem;
+  border-radius: 10px;
+  padding: 3% !important;
+  background-color: white;
+  box-shadow: 2px 2px 10px 0px rgb(4, 4, 4);
 }
 
 h1 {
@@ -54,10 +57,10 @@ h1 {
 }
 
 .enlace {
+  margin-top: 2%;
   text-decoration: none;
   display: flex;
-  justify-content: baseline;
-  align-self: flex-end;
+  justify-content: center;
   color: white;
 }
 
@@ -75,21 +78,26 @@ h1 {
     
 }
 
-/* Navbar container */
+
+/* Navbar pillada de internet para aprender como hacer un menu desplegable con css y 
+tener algo rápido https://es.w3hmong.com/howto/howto_css_dropdown_navbar.htm  */
+
 .navbar {
-  overflow: hidden;
-  background-color: rgb(134, 134, 134);
-  font-family: Arial;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    display: flex;
+    align-self: flex-start;
+    overflow: hidden;
+    background-color: rgb(134, 134, 134);
+    font-family: Arial;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+
 }
 
-/* Links inside the navbar */
-
 .navbar a {
+
+  gap: 0.9rem;
   float: left;
   font-size: 16px;
   color: white;
-  text-align: center;
   padding: 14px 16px;
   text-decoration: none;
 }
@@ -146,4 +154,3 @@ h1 {
 .news:hover .news-content {
   display: block;
 }
-
