--- a/staff/gabriel-rodriguez/vanilla-app/index.css
+++ b/staff/gabriel-rodriguez/vanilla-app/index.css
@@ -1,42 +1,72 @@
 /* resets */
 
-* {
-    box-sizing: border-box;
-}
-
 html, body {
     height: 100%;
 }
 
 body {
     margin: 0;
+    
 }
-
-
 
 /* layout - BEM */
 
-.container { /* block */
+.containerbody {
     display: flex; 
     flex-direction: column; 
     align-items: center; 
     justify-content: center;
     gap: .5rem;
-    /* background: linear-gradient(right, blue, white); */
-    /* background: -pref rgba(188, 209, 94, 0.841); */
-    border-radius: 2px;
+    background: linear-gradient(to top, blue, white); /*Siempre que se use el linear-gradient usar el to*/
     font-family: 'Franklin Gothic Medium';
     
 }
-.containerbody {
-   /* background-color: rgba(228, 226, 124, 0.875); */
-    background: linear-gradient(to top, white, blue);
+/* container */
+
+.container {
     display: flex; 
     flex-direction: column; 
     align-items: center; 
     justify-content: center;
     gap: .5rem;
+    
 }
+
+.container--full {
+    width: 100%;
+    height: 100%;
+}
+
+.container--full-width {
+    width: 100%;
+} 
+
+.container--full-height {
+    height: 100%;
+} 
+
+.container--content-start {
+    justify-content: start;
+}
+
+.container--row {
+    flex-direction: row;
+}
+
+.container--content-space-between {
+    justify-content: space-between;
+}
+
+.container--padding-h-s {
+    padding: 0 .5rem;
+}
+
+.container--padding-h-m {
+    padding: 0 1rem;
+}
+
+
+/* container__item */
 
 .container__item--left { /* block__element--modifier */
     align-self: start;
@@ -45,13 +75,3 @@ body {
 .container__item--right { /* block__element--modifier */
     align-self: end;
 }
-
-header {
-    background-color: blue;
-    position: fixed;
-    width: 100%;
-    top: 0;
-    height: 30px;
-    box-shadow: 0 1px 5px 0 rgba(50, 0, 180, 0.5);
-    display: flex;
-    gap: 15px;
