--- a/staff/xavi-grandes/vanilla-app-layered-architecture/index.css
+++ b/staff/xavi-grandes/vanilla-app-layered-architecture/index.css
@@ -6,6 +6,9 @@ html {
 
 body {
     background: radial-gradient(circle, rgba(199,204,230,1) 0%, rgba(72,70,252,1) 100%);
+}
+
+.body-login, .body-register {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -129,4 +132,10 @@ a {
 .loginLink:hover {
     background-color: #4f97c4; 
     transition: background-color 0.25s;
+}
+
+/* ------------------------------------------------------------------ */
+
+.body-home {
+    
 }
