--- a/staff/ignacio-nuñez/vanila-app/style.css
+++ b/staff/ignacio-nuñez/vanila-app/style.css
@@ -115,25 +115,27 @@ p{
 }
 
 .home-contenedor{
+    display: flex;
+    justify-content: center;
     height: 85%;
     background-color: bisque;
 }
 
 .home-header{
-    height: 15%;
     background-color: beige
 }
 
 .home-nav{
     height: 100%;
     display: grid;
-    grid-template-columns: repeat(9, 1fr);
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-columns: repeat(19, 1fr);
+    grid-template-rows: 25px 55px 25px;
     text-align: center;
+    padding-right: 15px;
 }
 
 .home-link-home{
-    grid-column: 1 / 2;
+    grid-column: 2 / 3;
     grid-row: 2/3;
     align-self: center;
     text-decoration: none;
@@ -142,43 +144,61 @@ p{
 }
     
 
-.home-link-login{
-    grid-column: 8 / 9;
+
+.username{
+    grid-column: 13/ 16;
     grid-row: 2/3;
     align-self: center;
-    text-decoration: none;
-    color: rgb(101, 98, 98);
-    font-size: 25px;
+    color: black;
+    font-size: 27px;
 }
 
-.home-link-register{
-    grid-column: 9 / 10  ;
+.menu-button{
+    grid-column: 19 / 20;
     grid-row: 2/3;
-    align-self: center;
-    text-decoration: none;
-    color: rgb(101, 98, 98);
-    font-size: 25px;
+   background-color: beige;
+    border-radius: 5px;
 }   
 
+.contenedor--menu{
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
+    padding: 5px;
+    gap:10px;
+    background-color: rgba(234, 238, 229, 0.7);
+    grid-column: 17 / 20;
+    grid-row-start: 3;
+    box-shadow: 2px 2px 2px rgb(0, 0, 0, 0.4);
+    border-radius: 5px;
+}
 .home-title{
-    grid-column: 5/6;
+    grid-column: 10/11;
     grid-row: 2/3;
     align-self:center;
     font-size: 40px;
 }
 
 .home-link-home:hover{
-  font-size: 30px;
   color:goldenrod
 }
 
-.home-link-login:hover{
-    font-size: 30px;
-    color:goldenrod
+.menu--links{
+    text-decoration: none;
+    color: black;
+    border: 1px solid black;
+    border-radius: 5px;
 }
 
-.home-link-register:hover{
-    font-size: 30px;
-    color:goldenrod 
-}   
+.menu--links:hover{
+    background-color: rgba(218, 165, 32, 0.5);
 
+}
+
+.settings-container{
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    background-color: bisque;
+    align-items: center;
+}
