--- a/staff/jaume-rodriguez/vanilla-app/index.css
+++ b/staff/jaume-rodriguez/vanilla-app/index.css
@@ -112,33 +112,143 @@ form img{
 
 .home__header{
     display: flex;
+    z-index: 3;
     align-items: center;
-    padding: 1rem 1.5rem;
+    padding: 0.7rem 1.5rem;
     background-color: #026aa7;
     gap: 0.8rem;
-    box-shadow: 0 0 0.5rem 0 black;
-}
-
-.home__header--username{
-    font-weight: bold;
-    font-size: 1rem;
-    color: #ffffff;
-    order: 3;
-}
-
-.home__header--logout{
-    font-weight: bold;
-    font-size: 0.9rem;
-    color: #99d8ff;
-    margin-left: auto;
-    order: 2;
-}
-
-.home__header--logout:hover{
-    color: #003f64;
 }
 
 .home__header--logo{
     width: 4.9rem;
     height: auto;
+}
+
+.home__header--logo:hover{
+    filter: invert();
+    background-color: transparent;
+    cursor: pointer;
+}
+
+.home__header__menu-panel--button{
+    order: 2;
+    background-color: transparent;
+    filter: invert();
+    margin-left: auto;
+    width: 2.5rem;
+    height: auto;
+}
+
+.home__header__menu-panel--button:hover{
+    filter: none;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+.home__menu__panel--container{
+    display: flex;
+    justify-content: end;
+    right: 0;
+    position: absolute;
+}
+
+.home__menu__panel{
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    z-index: 4;
+    background-color: #ffffff;
+    box-shadow: 0rem 0.05rem 0.1rem 0 rgb(174, 174, 174);
+    align-content: end;
+    width: 13rem;
+ 
+    padding: 1rem 1rem;
+    gap: 0.5rem;
+    border-radius: 0.1rem;
+}
+
+.home__menu__panel--user-name{
+    color: rgb(0, 0, 0);
+    padding: 0 0 0.3rem 0;
+    background-color: transparent;
+}
+
+.home__menu__panel--separation{
+    width: 100%;
+    justify-self: start;
+    border-color: #dedede;
+    border-style: dashed;
+}
+
+.home__menu__panel--text{
+    font-size: 1rem;
+    color: black;
+}
+
+.home__menu__panel--text:hover{
+    color: #000000;
+    background-color: transparent;
+    font-weight: 630;
+    cursor: pointer;
+}
+
+.home__main{
+    display: flex;
+    direction: row;
+    justify-content: center;
+    z-index: 1;
+    background-color: #ffffff;
+}
+
+.home__settings__section{
+    display: flex;
+    flex-flow: row wrap;
+    z-index: 1;
+    width: 100%;
+    justify-content: center;
+}
+
+.home__settings__header{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-content: center;
+    z-index: 0;
+    padding: 2rem;
+    background-color: #f4f5f7;
+    border-width: 0.1rem;
+    border-color: #dfe1e6;
+    border-style: solid;
+    width: 100%;
+}
+
+.home__settings--title{
+    align-self: flex-end;
+    font-weight: 300;
+    font-size: 2.1rem;
+    color: black;
+    padding: 2rem 1rem;
+}
+
+.home__settings--second-title{
+    align-self: flex-end;
+    font-weight: 400;
+    font-size: 1rem;
+    color: black;
+    padding: 2.2rem 0rem;
+}
+
+.home__settings__form{
+    display: flex;
+    justify-content: start;
+    flex-direction: column;
+    width: 23rem;
+    gap: 0.2rem;
+    padding: 3.5rem 3rem;
+    box-shadow: 0rem 0.15rem 0.3rem 0 rgb(208, 208, 208);
+}
+
+.home__settings__form--title{
+    margin-bottom: 1rem;
+    margin-top: 2rem;
 }
