I added new atributes for the html tags to get a design for the home

--- a/staff/xavi-grandes/vanilla-app-layered-architecture/index.css
+++ b/staff/xavi-grandes/vanilla-app-layered-architecture/index.css
@@ -137,5 +137,43 @@ a {
 /* ------------------------------------------------------------------ */
 
 .body-home {
-    
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    margin: 0px;
+}
+
+.home-header{
+    background-color: white;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100vw;
+}
+
+.homeImgLogo {
+    height: 70px;
+    margin-left: 15px;
+}
+
+.home-header-button {
+    margin: 0px;
+    margin-right: 15px;
+    cursor:pointer
+}
+
+.menu-panel {
+    background-color: #216c9a;
+    display: flex;
+    flex-direction: column;
+    width: 150px;
+    position: absolute;
+    right: 0;
+    top: 70px;
+}
+
+.a-settings{
+    color: white;
+    margin-top: 8px;
+    cursor: pointer;
 }
