--- a/staff/armando-alonso/vanilla-app/index.css
+++ b/staff/armando-alonso/vanilla-app/index.css
@@ -26,9 +26,9 @@ html {
   align-items: center;
   gap: 0.9rem;
   border-radius: 10px;
-  padding: 3% !important;
+  padding: 2% !important;
   background-color: white;
-  box-shadow: 2px 2px 10px 0px rgb(4, 4, 4);
+  box-shadow: 0px 0px 10px 0px rgb(4, 4, 4);
 }
 
 h1 {
@@ -61,15 +61,13 @@ h1 {
   color: #000000;
 }
 
-/* Navbar pillada de internet para aprender como hacer un menu desplegable con css y 
-tener algo rápido https://es.w3hmong.com/howto/howto_css_dropdown_navbar.htm  */
+/* Navbar Styles */
 
-.navbar {
+.nav {
   display: flex;
-  /* justify-content: space-between; */
   align-items: center;
   overflow: hidden;
-  /* background-color: #97b498; */
+  background-color: #97b498;
   font-family: monospace;
   padding-right: 2%;
   padding-left: 2%;
@@ -77,12 +75,18 @@ tener algo rápido https://es.w3hmong.com/howto/howto_css_dropdown_navbar.htm  *
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
 }
 
+.nav--menu {
+  font-size: 40px !important;
+  border: none;
+  background-color: transparent;
+}
+
 .profile {
   width: 100%;
   text-align: center;
   display: flex;
-  justify-content: flex-end;
-  color: white;
+  justify-content: center;
+  color: rgb(0, 0, 0);
   font-size: 20px;
 }
 
@@ -90,7 +94,7 @@ tener algo rápido https://es.w3hmong.com/howto/howto_css_dropdown_navbar.htm  *
   height: 70px;
 }
 
-.navbar a {
+.nav a {
   gap: 0.9rem;
   float: left;
   font-size: 18px;
