--- a/staff/xavier-zamora/vanilla-js-8/index.css
+++ b/staff/xavier-zamora/vanilla-js-8/index.css
@@ -42,7 +42,7 @@ h3 {
     align-self: center;
 }
 
-button {
+.button {
     background-color: linear;
     border-radius: 50%;
     background: linear-gradient(to left, #ffc800, #aa00ff);
@@ -106,7 +106,7 @@ button {
 .display-screen{
     background-color: white;
     height: 70%;
-    width: 30%;
+    width: 50%;
 }
 
 .display-screen-home{
