--- a/staff/federico-lopez/vanilla-app/index.css
+++ b/staff/federico-lopez/vanilla-app/index.css
@@ -1,11 +1,12 @@
 /* resets */
 
-html, body {
-    height: 100%;
+html,
+body {
+  height: 100%;
 }
 
 body {
-    margin: 0;
+  margin: 0;
 }
 
 /* layout - BEM */
@@ -13,53 +14,54 @@ body {
 /* container */
 
 .container {
-    display: flex; 
-    flex-direction: column; 
-    align-items: center; 
-    justify-content: center;
-    gap: .5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
 }
 
 .container--full {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 .container--full-width {
-    width: 100%;
-} 
+  width: 100%;
+}
 
 .container--full-height {
-    height: 100%;
-} 
+  height: 100%;
+}
 
 .container--content-start {
-    justify-content: start;
+  justify-content: start;
 }
 
 .container--row {
-    flex-direction: row;
+  flex-direction: row;
 }
 
 .container--content-space-between {
-    justify-content: space-between;
+  justify-content: space-between;
 }
 
 .container--padding-h-s {
-    padding: 0 .5rem;
+  padding: 0 0.5rem;
 }
 
 .container--padding-h-m {
-    padding: 0 1rem;
+  padding: 0 1rem;
 }
-
 
 /* container__item */
 
-.container__item--left { /* block__element--modifier */
-    align-self: start;
+.container__item--left {
+  /* block__element--modifier */
+  align-self: start;
 }
 
-.container__item--right { /* block__element--modifier */
-    align-self: end;
+.container__item--right {
+  /* block__element--modifier */
+  align-self: end;
 }
