--- a/staff/jaume-rodriguez/vanilla-app/index.css
+++ b/staff/jaume-rodriguez/vanilla-app/index.css
@@ -90,12 +90,15 @@ form img{
     margin-top: 0.3rem;
     padding: 0.3rem;
     background-color: rgb(38, 139, 247);
-    border-style: inherit;
     border-radius: 0.2rem;
+    border-style: none;
     color: white;
     font-weight: bold;
-    border-width: 0.1rem;
-    border-color: rgb(24, 136, 255);
+}
+
+.button:hover{
+    background-color:#0078bd;
+    cursor: pointer;
 }
 
 .textForm{
@@ -106,7 +109,14 @@ form img{
     text-align: center;
     padding: 1rem;
 }
+.form__checkbox--text{
+    font-size: 0.78rem;
+    margin: 0.75rem 0.5rem;
+}
 
+.form__checkbox__container{
+    display: flex
+}
 
 /* HOME STYLES */
 
@@ -161,7 +171,6 @@ form img{
     box-shadow: 0rem 0.05rem 0.1rem 0 rgb(174, 174, 174);
     align-content: end;
     width: 13rem;
- 
     padding: 1rem 1rem;
     gap: 0.5rem;
     border-radius: 0.1rem;
@@ -250,5 +259,32 @@ form img{
 
 .home__settings__form--title{
     margin-bottom: 1rem;
-    margin-top: 2rem;
+    margin-top: 0.5rem;
+}
+
+.update__name__button{
+    align-self: flex-start;
+    transform: scale(1.2);
+    padding: 0.51rem;
+    background-color: rgb(38, 139, 247);
+    border-radius: 0.2rem;
+    color: white;
+    margin: 0.24rem 0.45rem;
+    cursor: pointer;
+    border-style: none;
+}
+
+.update__name__button:hover{
+    background-color: #026aa7;
+
+}
+
+.update__settings__form{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+}
+
+.update__settings__form input{
+    padding: 0.2rem 2.75rem 0.2rem 0.2rem;
 }
